# OrderBook

./: .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  setup.sh  start.sh  stop.sh
.github/workflows/: ci.yml
core/: CMakeLists.txt  README.md
core/include/: Limit.h  Order.h  OrderBook.h  Types.h
core/src/: Limit.cpp  Order.cpp  OrderBook.cpp  Types.cpp  main.cpp
frontend/: README.md  package.json
frontend/public/: index.html  manifest.json  robots.txt
frontend/src/: App.css  App.js  index.css
frontend/src/components/common/: Header.js  ProtectedRoute.js  Sidebar.js
frontend/src/context/: AuthContext.js  WebSocketContext.js
frontend/src/pages/: DashboardPage.js  LoginPage.js  MarketDataPage.js  OrderBookPage.js  PortfolioPage.js  SettingsPage.js
frontend/src/services/: api.js  authService.js  marketDataService.js  orderService.js
services/api-gateway/: README.md  package.json
services/api-gateway/src/: server.js
services/api-gateway/src/middleware/: auth.js  errorHandler.js
services/api-gateway/src/services/: AuthService.js  WebSocketManager.js
services/market-data-service/: README.md  package.json
services/market-data-service/src/: server.js
services/market-data-service/src/controllers/: MarketDataController.js
services/orderbook-service/: README.md  package.json
services/orderbook-service/src/: OrderBookWrapper.js  server.js
services/user-service/: README.md  package.json
services/user-service/src/: server.js
shared/database/: init.sql
shared/docs/: API.md  ARCHITECTURE.md
(+8 files in other folders)
